# lib_mem

./: CMakeLists.txt  README.md
configs/: Memory_Config.h.example
include/lib_mem/: Allocator.h  AllocatorSafe.h  BitmapAllocator.h  Memory.h  Memory_Impl.h  Nvm.h
mocks/: CMakeLists.txt
mocks/include/: mem_config.h
src/: AllocatorSafe.c  BitmapAllocator.c  Memory.h  Memory_Impl.h
test/: CMakeLists.txt
test/src/: Test_BitmapAllocator.cpp
